introducao bootstrap em saopaulo.html e uso de api

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div class="barraPesquisas">
             <div class="search-element">
                 <label class="search-label">Localização</label>
-                <input id="localizacao"class="search-input" type="text" autocomplete="on" placeholder="Insira a cidade" name="query">
+                <input id="localizacao" class="search-input" type="text" autocomplete="on" placeholder="Insira a cidade"
+                    name="query">
             </div>
             <div class="search-element">
                 <label class="search-label">Check-in</label>
@@ -59,10 +60,10 @@
         </div>
     </form>
 
-    <main id="textoPrincipal">
+    <section id="textoPrincipal">
         <h1>Podemos estar afastados, mas</h1>
         <h1> vamos superar isso juntos.</h1>
-    </main>
+    </section>
 
 
     <section class="imagens">
@@ -86,7 +87,7 @@
         </div>
     </section>
 
-    <div id="bloco3">
+    <section id="bloco3">
         <div class="c1bloco3">
 
             <div>
@@ -106,10 +107,10 @@
 
         </div>
 
-    </div>
+    </section>
 
     </div>
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
